# agent-worktree

./: .gitignore  .mcp.json  AGENTS.md  README.md  SECURITY.md  description.md  pyproject.toml  worktree.spec
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dispatch.yml  release.yml  test.yml
.serena/: .gitignore  .reminder-state.json  project.yml
.seretos/: projects.yml
scripts/: build.ps1  test.ps1
skills/worktree/: SKILL.md
src/worktree_plugin/: __main__.py  config.py  server.py
src/worktree_plugin/contract/: __init__.py  loader.py  schema.py
src/worktree_plugin/core/: __init__.py  config.py  manager.py  ports.py
src/worktree_plugin/setup/: __init__.py  runner.py
src/worktree_plugin/tools/: __init__.py  worktree.py
tests/: test_config.py  test_contract.py  test_plugin_manifest.py  test_ports.py  test_setup_runner.py  test_smoke.py  test_worktree_tools.py
